--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
             <section id="appconceptblocks">
                 <div class="column phonecalls">
-                    <img src="../html-css/assets/images/1.png" alt="">
+                    <img src="./assets/images/1.png" alt="">
                     <h1>Phone Calls</h1>
                     <p>Best for active and designers who need more<br>
                         projects and premium features</p>
                 </div>
                 <div class="column messages">
-                    <img src="../html-css/assets/images/2.png" alt="">
+                    <img src="./assets/images/2.png" alt="">
                     <h1>Messages</h1>
                     <p>Active freelancers and designers who need more<br>
                         projects and premium features.</p>
